[package]
name = "gitlab-api-test"
version = "0.1.0"
authors = ["paulwork"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab-api = "0.6"
dotenv = "0.15.0"

[target.x86_64-apple-darwin.openssl-sys]
rustc-link-search = [ "/usr/local/opt/openssl/lib" ]
rustc-link-lib = [ "ssl", "crypto" ]
include = [ "/usr/local/opt/openssl/include" ]

docker run -d -it -p 8096:8080  \
    -v "$PWD/bla:/home/coder/project"  \
     -u "$(id -u):$(id -g)" \
    codercom/code-server:latest