[package]
authors = ["paulwork"]
edition = "2018"
name = "gitlab-api-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
gitlab-api = "0.6"

[target.x86_64-apple-darwin.openssl-sys]
include = ["/usr/local/opt/openssl/include"]
rustc-link-lib = ["ssl", "crypto"]
rustc-link-search = ["/usr/local/opt/openssl/lib"]
